--- a/assessNew.html
+++ b/assessNew.html
@@ -360,7 +360,7 @@
             success:function(result){
               if(result.code==100){//保存成功
                 alert("提交成功,不久将有专家联系您,请保持电话畅通!");
-                location.href="#";
+                location.href="userCenter.html";
               }
               else{
                 alert("提交失败,请稍后再试!");
